title and copyright info added

--- a/app/views/sections/new.html.erb
+++ b/app/views/sections/new.html.erb
@@ -33,7 +33,7 @@
     </table>
 
     <div class="form-buttons">
-      <%= sumbit_tag("Create Section") %>
+      <%= submit_tag("Create Section") %>
     </div>
   <% end %>
 </div> 
