--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	  <title>Simple CMS</title>	  
+	  <title>The Anti-Trafficking One-Stop Info Shop</title>	  
 	</head>
 	<body>
     <!--before yield -->
