--- a/app/views/sections/edit.html.erb
+++ b/app/views/sections/edit.html.erb
@@ -1,2 +1,27 @@
-<h1>Sections#edit</h1>
-<p>Find me in app/views/sections/edit.html.erb</p>
+<%= link_to("<< Back to Sections List", {:action => 'index'}, :class => 'back-to link') %>
+<div class="Sections edit">
+  <h2>Update Section</h2>
+
+  <%= form_for(:section, :url => {:action => 'update', :id => @section.id}) do |f| %>
+
+    <table summary="Section form fields">
+      <tr>
+      	<th>Name</th>
+      	<td><%= f.text_field(:name) %></td>
+      </tr>
+      <tr>
+        <th>Position</th>
+        <td><%= f.text_field(:position) %></td>
+      </tr>
+      <tr>
+      	<th>Visible</th>
+      	<td><%= f.text_field(:visible) %></td>
+      </tr>
+    </table>
+
+    <div class="form_buttons">
+      <%= submit_tag("Update Section") %>
+    </div>
+  <% end %>
+</div>
+
