--- a/app/views/pages/delete.html.erb
+++ b/app/views/pages/delete.html.erb
@@ -1,4 +1,4 @@
-<%= link_to ("Back to List"), {:action => 'index'}, :class => 'back-link' %>
+<%= link_to ("Back to Pages List"), {:action => 'index'}, :class => 'back-link' %>
 
 <div class="pages delete"> 
   <h2>Delete Page</h2>
