--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -1,36 +1,17 @@
 <%= link_to ("Back to List"), {:action => 'index'}, :class => 'back-link' %>
 
-<div class="pages new"> 
-  <h2>Create Page</h2>
+  <div class="pages new"> 
+    <h2>Create Page</h2>
 
-  <%= form_for(:page, :url => {:action => 'create', :id => @page.id}) do |f| %>
+      <%= form_for(:page, :url => {:action => 'create', :id => @page.id}) do |f| %>
 
-    <table summary="Page form fields">
-      <tr>
-      	<th>Subject ID</th>
-      	<td><%= f.text_field(:subject_id) %></td>
-      </tr>
-      <tr>
-      	<th>Name</th>
-      	<td><%= f.text_field(:name) %></td>
-      </tr>
-      <tr>
-      	<th>Permalink</th>
-      	<td><%= f.text_field(:permalink) %></td>
-      </tr>
-      <tr>
-      	<th>Position</th>
-      	<td><%= f.text_field(:position) %></td>
-      </tr>
-      <tr>
-      	<th>Visible</th>
-      	<td><%= f.text_field(:visible) %></td>
-      </tr>
-    </table>
+      <%= render(:partial => "form", :locals => {:f => f}) %> 
 
-    <div class="form-buttons">
-      <%= submit_tag("Create Page") %>
-    </div>
+    
+
+  <div class="form-buttons">
+    <%= submit_tag("Create Page") %>
+  </div>
 
   <% end %>
 </div>
