--- a/app/views/sections/new.html.erb
+++ b/app/views/sections/new.html.erb
@@ -1,4 +1,4 @@
-<%= link_to("<<Back to List", {:action => 'index'}, :class => 'back-link') %>
+<%= link_to("<<Back to Sections List", {:action => 'index'}, :class => 'back-link') %>
 
 <div class="sections new">
   <h2>Create Section</h2>
