--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -1,10 +1,4 @@
-<% if !flash[:notice].blank? %>
-  <div class="notice">
-  	<%= flash[:notice] %>
-  </div>
-<% end %>
-
-<%= link_to ("Back to List"), {:action => 'index'}, :class => 'back-link' %>
+<%= link_to ("Back to Sections List"), {:action => 'index'}, :class => 'back-link' %>
 
 <div class="sections show"> 
   <h2>Show Section</h2>
