Initial styling added

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	  <title>The Anti-Trafficking One-Stop Info Shop | <%= @page_title || "Admin" %></title>	  
+	  <title>The Anti-Trafficking One-Stop Info Shop | <%= @page_title || "Admin" %></title>
+      <%= stylesheet_link_tag('application', :media => 'all') %> 
 	</head>
 	<body>
 	  <div id="header">
