--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	  <title>The Anti-Trafficking One-Stop Info Shop</title>	  
+	  <title>The Anti-Trafficking One-Stop Info Shop</title>
+	  <%= javascript_include_tag('public') %>	  
 	</head>
 	<body>
     <!--before yield -->
