--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -1,8 +1,12 @@
 <% @page_title = "Subjects" %>
 <div class="Subjects index">
-  <h2>Subjects</h2>
 
-  <%= link_to("Add New Subject", {:action => 'new'}, :class => 'action new') %>
+  <%= image_tag('prostitution-not-a-choice.png', :size => '300x300') %>
+  
+  <h2>Subjects</h2>
+  
+  <%= link_to(image_tag('blue-rose.png', :size => '70x70') + "Add New Subject", {:action => 'new'}, :class => 'action new') %>
+
   <div><%= pluralize(@subjects.size, 'subject') %> found</div>
   <table class="Listing" summary="Subject List">
     <tr class="header">
